# wiic

./: CHANGELOG  README
src/: CMakeLists.txt  Doxyfile.in
src/example/: CMakeLists.txt  example.c  example.cpp
src/log/: accsample.cpp  accsample.h  dataset.cpp  dataset.h  gyrosample.cpp  sample.h  training.cpp  training.h
src/logging/: dataset.h
src/ml/: CMakeLists.txt  MLAlg.cpp  MLAlg.h  MLData.cpp  MLData.h
src/wiic/: CMakeLists.txt  balanceboard.c  classic.c  definitions.h  dynamics.c  dynamics.h  events.c  events.h  guitar_hero_3.c  io.c  io.h  io_mac.h  io_mac.m  io_nix.c  ir.c  motionplus.c  motionplus.h  nunchuk.c  os.h  speaker.c  speaker.h  wiic.c  wiic.h  wiic_doc.h  wiic_functions.h  wiic_internal.h  wiic_macros.h  wiic_structs.h
src/wiicpp/: CMakeLists.txt  wiicpp.cpp  wiicpp.h  wiiusecpp.cpp
src/wiicpp/logging/: accsample.h  dataset.cpp  dataset.h  sample.h  training.cpp  training.h
src/wiiusecpp/: CMakeLists.txt  wiiusecpp.h
