FIND_PACKAGE(OpenCV QUIET)

IF(OpenCV_FOUND)
	MESSAGE(STATUS "Found OpenCV: ${OpenCV_LIBS}")
	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../wiic/)
	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../log/)
	INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIR})

	SET(WIICML_SOURCES MLData.cpp)
	ADD_LIBRARY(wiicml SHARED ${WIICML_SOURCES})
	TARGET_LINK_LIBRARIES(wiicml ${OpenCV_LIBS})

	INSTALL(TARGETS wiicml DESTINATION /usr/local/lib)
	INSTALL(FILES MLData.h DESTINATION /usr/local/include/wiic/)
ELSE(OpenCV_FOUND)
	MESSAGE(STATUS "OpenCV not found. WiiC-ML will not be compiled.")
ENDIF(OpenCV_FOUND)
